show date and add awesome font

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,6 +7,10 @@
 // Bootstrap
 @import 'bootstrap/scss/bootstrap';
 
+// Fontawesome
+
+@import "@fortawesome/fontawesome-free/css/all.css";
+
 .bd-navbar {
     background-color: #052B64;
 }
